--- a/htdocs/openlayers.html
+++ b/htdocs/openlayers.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
     <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/4.6.5/ol.js"></script>
+    <script src="snippets.js"></script>
 
   </head>
   <body>
@@ -25,18 +26,6 @@
       <div id="popup-content"></div>
     </div>
     <script>
-      /*
-      import Map from 'ol/Map.js';
-      import View from 'ol/View.js';
-      import TileLayer from 'ol/layer/Tile.js';
-      import OSM from 'ol/source/OSM.js';
-      import GeoJSON from 'ol/format/GeoJSON.js';
-      import Circle from 'ol/geom/Circle.js';
-      import {Tile as TileLayer, Vector as VectorLayer} from 'ol/layer.js';
-      import {OSM, Vector as VectorSource} from 'ol/source.js';
-      import {Circle as CircleStyle, Fill, Stroke, Style} from 'ol/style.js';
-      */
-
 
       var mymap = new ol.Map({
         target: 'mapid',
