--- a/htdocs/leaflet.html
+++ b/htdocs/leaflet.html
@@ -4,13 +4,12 @@
   <title>MapServer Leaflet</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js" integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og==" crossorigin=""></script>
-  -->
-  <link rel="stylesheet" href="/cdn/leaflet.css"/>
-  <script src="/cdn/leaflet.js"></script>
+
   <script src="js/leaflet.wms.js"></script>
+  <script src="snippets.js"></script>
 
 </head>
 
